--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,11 @@
     "@gsap/react": "^2.1.1",
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.9",
+    "google-map-marker": "^1.2.3",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-gmap-picker": "^1.0.3",
     "react-router-dom": "^7.0.2",
     "remixicon": "^4.5.0",
     "socket.io-client": "^4.8.1"
